Renamed to mobile_icon_switcher

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="de.timthetimber.iconswitcher"
+<manifest package="de.timthetimber.mobileiconswitcher"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
