--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Setup Flutter SDK
         uses: flutter-actions/setup-flutter@v2.2
         with:
+          version: 3.0.5
           channel: 'stable' # you can choose the Flutter channel you prefer: stable, beta, dev or master
 
       - uses: dart-lang/setup-dart@v1
