--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,13 +17,12 @@ jobs:
       - name: Setup Flutter SDK
         uses: flutter-actions/setup-flutter@v2.2
         with:
-          version: 3.0.5
+          version: 3.10.5
           channel: 'stable' # you can choose the Flutter channel you prefer: stable, beta, dev or master
 
-      - uses: dart-lang/setup-dart@v1
       - name: Install dependencies
         run: flutter pub get
       # Here you can insert custom steps you need
       # - run: dart tool/generate-code.dart
       - name: Publish
-        run: dart pub publish --force
+        run: flutter pub publish
