--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,5 +24,4 @@ jobs:
         run: flutter pub get
       # Here you can insert custom steps you need
       # - run: dart tool/generate-code.dart
-      - name: Publish
-        run: flutter pub publish --force
+      - uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
