--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,4 +24,7 @@ jobs:
         run: flutter pub get
       # Here you can insert custom steps you need
       # - run: dart tool/generate-code.dart
-      - uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+      
+      - name: Publish package
+        uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+        
