--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           version: 3.10.5
           channel: 'stable' # you can choose the Flutter channel you prefer: stable, beta, dev or master
-
+      - uses: dart-lang/setup-dart@v1
       - name: Install dependencies
         run: flutter pub get
       # Here you can insert custom steps you need
